src/test/deca/syntax/invalid/int_too_large_compilation_error.deca
// Description :
// Test d’un dépassement de capacité sur un entier.
//
// Resultats :
// Une erreur de compilation est levée

{
    int x = 2147483648;
}
